  * Implement #259 show tooltip with country name in the peers tab
  * Add an error category to the tracker sidebar list
  * Add Find More Plugins button to Plugins preference page
  * Fix #518 remove header in add torrent dialog to save vertical space
  * Add a Cache preferences page to adjust cache settings and examine cache status
  * Add ability to rename files prior to adding them

==== ConsoleUI ====
  * Changed to use curses for a more interactive client

==== WebUI ====
  * Move over to using Twisted-Web for the webserver.
  * Move to only AJAX interface built upon Ext-JS.

==== Plugins ====
  * Add Scheduler plugin
  * Add Extractor plugin

==== Misc ====
  * PyGTK dependency bumped to => 2.12 to use new tooltip system
  * Add new scripts for invoking UIs: deluge-gtk, deluge-web, deluge-console
  * Remove GeoIP database from the source tree

=== Deluge 1.1.0 - "Time gas!" (10 January 2009) ===
==== Core ====
  * Implement #79 ability to change outgoing port range
  * Implement #296 ability to change peer TOS byte
  * Add per-torrent move on completed settings
  * Implement #414 use async save_resume_data method
  * Filter Manager with torrent filtering in get_torrents_status , for sidebar and plugins.
  * Implement #368 add torrents by infohash/magnet uri (trackerless torrents)
  * Remove remaining gtk functions in common
  * Tracker icons.
  * Add ETA for torrents with stop at seed ratio set
  * Fix #47 the state and config files are no longer invalidated when there is no diskspace
  * Fix #619 return "" instead of "Infinity" if seconds == 0 in ftime
  * Add -P, --pidfile option to deluged

==== GtkUI ====
  * Add peer progress to the peers tab
  * Add ability to manually add peers
  * Sorting # column will place downloaders above seeds
  * Remove dependency on libtorrent for add torrent dialog
  * Allow adding multiple trackers at once in the edit tracker dialog
  * Implement #28 Create Torrent Dialog